--- a/templates/Index.html
+++ b/templates/Index.html
@@ -1,75 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mission to Mars</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  
-</head>
-
-<body>
-  <div class="container">
-
-    <div class="jumbotron text-center border-bottom">
-      <h1 class="font-weight-bold">Mission to Mars</h1>
-      <p><a class="btn btn-primary btn-lg" href="../scrape" role="button">Scrape New Data</a></p>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h2><u>Latest Mars News</u></h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Mission to Mars</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
-    </div>
-  </br>
-    <div class="row">
-      <div class="col-md-12">
-        <h4>{{mars_data_dict.news1head}}</h4>
-        <p>{{mars_data_dict.new1con}}</p>
-      </div>
-    </div>
-  <hr>
-    <div class="row">
-      <div class="col-md-8 border">
-        <h2 class=""><u>Featured Mars Image</u></h2> 
-        </br>
-        <img src="{{mars_data_dict.featured_image_url}}" alt="Features Mars Image">
-      </div>
-      <div class="col-md-4">
-        <div class="border">
-          </br>
-          <h5>Mars Facts Table</h5>
-            {{ mars_data_dict.table2 | safe }}
+      <div class="row" id="mars-news">
+        <div class="col-md-12">
+          <div class="media">
+            <div class="media-body">
+              <h2>Latest Mars News</h2>
+              <h4 class="media-heading">{{ mars_data_dict.news1head }}</h4>
+              <p>{{ mars_data_dict.new1con }}</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  <hr>
-    <div class="row">
-      <div class="col-md-8 offset-4">
-        <h2 class="align-items-center"><u>Mars Hemispheres</u></h2>  
+      <div class="row" id="mars.data.dict.final_image">
+        <div class="col-md-8">
+          <h2>Featured Mars Image</h2>
+          <img
+            src="{{ mars_data_dict.final_image | safe }}"
+            class="img-responsive"
+            alt="Responsive image"
+          />
+        </div>
+
+        <div class="col-md-4">
+          <div class="row" id="mars-facts">
+            <h4>Mars Facts</h4>
+            {{ mars_data_dict.table2 | safe }}
+          </div>
+        </div>
+      </div>
+      <div class="row" id="mars-hemispheres">
+        <div class="page-header">
+          <h2 class="text-center">Mars Hemispheres</h2>
+        </div>
+        {% for hemisphere in mars_data_dict.hemisphere %}
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <img src="{{ hemisphere.img_url }}" alt="...">
+            <div class="caption">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
       </div>
     </div>
-    </br>
-    <div class="row">       
-            {% for img_url in mars_data_dict.hemisphere %} 
-              <div class="col-6 border">
-              </br>
-                    <div>
-                      <img src={{image_url.img_url}} alt={{image_url.img_url}}>
-                      <h3>{{image_url.title}}</h3>
-                    </div>
-              </div>
-            {% endfor %}
-    </div> 
-
-  <hr>
-  
-</body>
-
+  </body>
 </html>
-
